Sun Feb 16 12:00:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (client_process_import_file): Nuke first_time.  If
	toplevel_repos were ever NULL here, the code would dump core in
	strncmp a few lines down.  And client_import_setup ensures
	toplevel_repos is not NULL.

Sun Feb 16 08:16:48 1997  Ian Lance Taylor  <ian@cygnus.com>

	* client.c (client_process_import_file): Rename short_pathname to
	update_dir (to reflect its function) and make sure that it doesn't
	point to uninitialized memory if repository and toplevel_repos
	contain the same string.

Sun Feb 16 08:16:48 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (start_rsh_server): Nuke comment about weirdnesses with
	pre-1.5 versions of CVS and .bashrc/.cshrc.  The remote protocol
	is interoperable only back to 1.5, and people who need to know are
	unlikely to see this comment anyway.

Sun Dec 15 13:12:30 1996  Michael Douglass <mikedoug@texas.net>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (cmds): Added an entry for new logout command.
	(cmd_usage): Added an entry for new logout command.
	(lookup_command_attribute): Added 'logout' to list of commands
	that set need_to_crate_root to 1.
	* login.c, cvs.h (logout): New command for removing entries from
	the .cvspass file.
	(logout_usage): Usage information on the logout command.

Wed Feb 12 11:19:42 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c (struct send_data): Fix indentation.

Wed Feb 12 08:48:04 1997  Greg A. Woods  <woods@most.weird.com>

	* mkmodules.c (loginfo_contents): add missing comma in
	initializer statement (caused syntax error on SunOS-4).

Tue Feb 11 21:14:28 1997  Ian Lance Taylor  <ian@cygnus.com>

	* commit.c (find_fileproc): If force_ci is set, set the status to
	T_MODIFIED even if the file hasn't changed.
	(commit): Pass force_ci to send_files as new force argument.
	* client.c (struct send_data): Define.
	(send_fileproc): The callerdat parameter now points to a send_data